# yaas

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  l10n.yaml  opencode.json  pubspec.yaml
.cursor/rules/: rinf.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
lib/: main.dart  navigation.dart
lib/l10n/: app_en.arb  app_ru.arb
lib/providers/: adb_state.dart  app_state.dart  cloud_apps_state.dart  device_state.dart  log_state.dart  settings_state.dart  task_state.dart
lib/src/l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart
lib/utils/: sideload_utils.dart  theme_utils.dart  utils.dart
lib/widgets/: animated_adb_button.dart  animated_uninstall_dialog.dart  cloud_app_list.dart  download_apps.dart  drag_drop_overlay.dart  error_screen.dart  home.dart  local_sideload.dart  logs_screen.dart  manage_apps.dart  settings.dart  settings_screen.dart  status_bar.dart  task_list_dialog.dart
lib/widgets/app_management/: cloud_app_details_dialog.dart  cloud_app_list.dart  download_apps.dart  local_sideload.dart  manage_apps.dart
lib/widgets/cloud_apps/: cloud_app_details_dialog.dart  cloud_app_list.dart
lib/widgets/common/: animated_adb_button.dart  animated_refresh_button.dart  connection_diagnostics_button.dart  context_menu_region.dart  downloader_config_from_url_dialog.dart  drag_drop_overlay.dart  no_device_connected_indicator.dart  selectable_link_text.dart  status_bar.dart
lib/widgets/device/: device_actions.dart
lib/widgets/dialogs/: active_tasks_close_dialog.dart  animated_uninstall_dialog.dart  backup_options_dialog.dart  connection_diagnostics_dialog.dart  downloader_setup_dialog.dart  task_list_dialog.dart
lib/widgets/screens/: about_screen.dart  backups_screen.dart  donate_apps_screen.dart  download_apps_screen.dart  downloads_screen.dart  error_screen.dart  home.dart  home_screen.dart  local_sideload_screen.dart  logs_screen.dart  manage_apps_screen.dart  settings_screen.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/packaging/appimage/: make_config.yaml
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
messages/: basic.proto  buf.yaml  download.proto  system.proto  task.proto
messages/adb/: adb.proto  command.proto  device.proto  download.proto
native/hub/: Cargo.toml  build.rs  rustfmt.toml
native/hub/assets/: list_apps.dex
native/hub/src/: adb.rs  apk.rs  archive.rs  backups.rs  backups_catalog.rs  backups_list.rs  casting.rs  downloader.rs  downloader_manager.rs  downloads.rs  downloads_catalog.rs  lib.rs  logging.rs  sample_functions.rs  settings.rs  signals.rs  task.rs  utils.rs
native/hub/src/adb/: battery.rs  battery_dump.rs  core.rs  device.rs  handler.rs  mod.rs  service.rs
native/hub/src/adb/device/: backup.rs  battery_dump.rs  mod.rs  sideload.rs  transfer.rs
native/hub/src/assets/: list_apps.dex
native/hub/src/downloader/: artifacts.rs  cloud_api.rs  cloud_list.rs  config.rs  controller.rs  core.rs  download_metadata.rs  downloads_catalog.rs  http_cache.rs  manager.rs  metadata.rs  mod.rs  nif.rs  progress.rs  rclone.rs  repo.rs  service.rs  service_manager.rs  setup.rs  sources.rs  webdav.rs
native/hub/src/downloader/rclone/: cli.rs  files.rs  mod.rs  storage.rs
native/hub/src/downloader/repo/: ffa.rs  mod.rs  new_repo.rs  newrepo.rs
native/hub/src/models/: adb_state.rs  apk_info.rs  cloud_app.rs  device_space.rs  device_type.rs  downloader_config.rs  installed_downloader_config.rs  installed_package.rs  mod.rs  settings.rs  signals.rs  vendor.rs
native/hub/src/models/signals/: backups.rs  casting.rs  cloud_app_metadata.rs  download.rs  downloads_local.rs  logging.rs  mod.rs  settings.rs  system.rs  task.rs
native/hub/src/models/signals/adb/: command.rs  device.rs  devices_list.rs  dump.rs  mod.rs  state.rs
native/hub/src/models/signals/cloud_apps/: details.rs  list.rs  mod.rs  reviews.rs
native/hub/src/models/signals/downloader/: availability.rs  mod.rs  progress.rs  setup.rs
native/hub/src/models/signals/storage/: mod.rs  remotes.rs
native/hub/src/resources/: list_apps.dex
native/hub/src/signals/: download.rs  settings.rs  system.rs  task.rs
native/hub/src/signals/adb/: device.rs
native/hub/src/task/: backup.rs  donate.rs  download.rs  install.rs  manager.rs  mod.rs
native/hub/src/utils/: speed.rs
native/yarc/: Cargo.toml
native/yarc/benches/: container.rs  container_quick.rs
native/yarc/src/: app_list.rs  container.rs  lib.rs  manifest.rs
scripts/: build_appimage.sh  bundle_7zip.sh  bundle_adb.sh  launch_portable.bat
test/widgets/dialogs/: active_tasks_close_dialog_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
