# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `./target` output folder and
# various Rust configurations.

[workspace]
members = ["./native/*"]
resolver = "2"

[profile.release]
# TODO: enable optimizations
#lto = true 
debug = true
strip = "debuginfo"
split-debuginfo = "packed"

# [profile.dev]
# split-debuginfo = "packed"
