[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
derive_more = { version = "2.0.1", features = ["debug"] }
dirs = "6.0.0"
#forensic-adb = { path = "../../../../forensic-adb" }
forensic-adb = { git = "https://github.com/skrimix/forensic-adb" }
futures = "0.3.31"
humansize = "2.1.3"
lazy-regex = "3.4.1"
log = { version = "0.4.22", features = [
    "max_level_trace",
    "release_max_level_debug",
] } # needed for tracing-log
mimalloc = "0.1.43"
rinf = { version = "8.7.2", features = ["show-backtrace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
sevenz-rust2 = "0.18.0"
sysproxy = { git = "https://github.com/zzzgydi/sysproxy-rs" }
test-log = { version = "0.2.16", features = ["trace"] }
tokio = { version = "1.43.1", features = [
    "macros",
    "fs",
    "tracing",
    "sync",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tracing = { version = "0.1.41", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.20", features = [
    "time",
    "env-filter",
    "tracing-log",
    "local-time",
] }
which = { version = "8.0.0", features = ["tracing"] }
time = { version = "0.3.42", features = ["formatting", "macros", "local-offset"] }
sanitize-filename = "0.6.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
resand = { git = "https://github.com/skrimix/resand" }
zip = "5.1.1"
rand = "0.9.2"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[package.metadata.cargo-machete]
ignored = ["log"]

[lints.clippy]
large_futures = "warn"
