[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
csv-async = { version = "1.3", features = ["tokio"] }
derive_more = { version = "2.0", features = ["debug"] }
dirs = "6.0"
#forensic-adb = { path = "../../../../forensic-adb" }
forensic-adb = { git = "https://github.com/skrimix/forensic-adb" }
futures = "0.3"
async-trait = "0.1"
humansize = "2.1"
lazy-regex = "3.4"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] } # needed for tracing-log
mimalloc = "0.1"
rinf = { version = "=8.8.0", features = ["show-backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sysproxy = { git = "https://github.com/zzzgydi/sysproxy-rs" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1.43", features = [
    "macros", "fs", "tracing", "sync", "rt-multi-thread" ] }
tokio-stream = { version = "0.1", features = ["fs", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = [
    "max_level_trace",
    "release_max_level_debug" ] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "time", "env-filter", "tracing-log", "local-time" ] }
which = { version = "8.0", features = ["tracing"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
sanitize-filename = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
resand = { git = "https://github.com/skrimix/resand" }
zip = "6"
rand = "0.9"
mdns-sd = "0.17"
md5 = "0.8"
base64 = "0.22"
fs4 = { version = "0.13", features = ["fs-err3-tokio", "tokio"] }
fs-err = { version = "3", features = ["tokio"] }
uuid = { version = "1.18", features = ["v4"] }
sha2-const-stable = "0.1.0"
const-hex = "1.17"
const_format = "0.2"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[package.metadata.cargo-machete]
ignored = ["log", "built"]

[lints.clippy]
large_futures = "warn"
